tests/snapshots/scripts_sanitized/Admin API Tool/Database Server - ID 12/Get Server Current Folder Settings - ID 122.txt.snap
---
source: src/main.rs
expression: output_content
---
#  PURPOSE: Get Server Current Folder Settings
#  HISTORY:
     - Created:   2020-01-19 by Mike Duncan (mduncan@soliantconsulting.com)
     - Modified:  2020-00-00 

AnwenderAbbruchZulassen setzen [ ON ]
Fehleraufzeichnung setzen [ ON ]
Variable setzen [ $error ; 0 ]

# -------------------------------------------------------------
#  SET-UP
# -------------------------------------------------------------
Script ausführen [ Aus Liste ; "Set Config" ]
Variable setzen [ $endpoint ; "/server/currentfoldersettings" ]
Variable setzen [ $curloptions ; " --request GET" &
				" --header \"Authorization: Bearer " & $$my.token & "\"" &
				" --header \"Content-Type: application/json\"" &
				" --dump-header $$my.headers" ]

# -------------------------------------------------------------
#  PROCESS
# -------------------------------------------------------------
Aus URL einfügen ⚠️⚠️⚠️ FM-XML-EXPORT-EXPLODER: UNKNOWN SCRIPT-STEP [ ID: "160" ] ⚠️⚠️⚠️
Script ausführen [ Aus Liste ; "Handle response" ]

Wenn [ Hole ( ScriptErgebnis ) = "1" ]
	# parse json response
	Feldwert setzen [ FMS__fmserver::defaultDatabaseFolder ; JSONGetElement ( $$my.result ; "response.defaultDatabaseFolder" ) ]
	Feldwert setzen [ FMS__fmserver::secureDatabaseFolder ; JSONGetElement ( $$my.result ; "response.secureDatabaseFolder" ) ]
	Feldwert setzen [ FMS__fmserver::additionalDatabaseFolder ; JSONGetElement ( $$my.result ; "response.additionalDatabaseFolder[0]" ) ]
	Feldwert setzen [ FMS__fmserver::additionalRemoteContainerFolder ; JSONGetElement ( $$my.result ; "response.additionalRemoteContainerFolder[0]" ) ]
	Feldwert setzen [ FMS__fmserver::backupPath ; JSONGetElement ( $$my.result ; "response.backupPath" ) ]
	Feldwert setzen [ FMS__fmserver::progressiveBackupFolder_enabled ; JSONGetElement ( $$my.result ; "response.progressiveBackupFolder[0]" ) ]
	Feldwert setzen [ FMS__fmserver::progressiveBackupFolder ; JSONGetElement ( $$my.result ; "response.progressiveBackupFolder[1]" ) ]
	
Ende (wenn)

# -------------------------------------------------------------
#  CLEAN UP
# -------------------------------------------------------------
Wenn [ $error = 0 ]
	#  set to exit true if you do not need to pass an error
	Variable setzen [ $error ; 1 // exit true ]
Ende (wenn)

Aktuelles Script verlassen [ $error ]
