tests/snapshots/scripts_sanitized/Admin API Tool/Database Server - ID 12/Get Server General Settings - ID 14.txt.snap
---
source: src/main.rs
expression: output_content
---
#  PURPOSE: Get Server General Configuration
#  HISTORY:&#13;   - Created:   2018-05-09 by Mike Duncan (mduncan@soliantconsulting.com)&#13;   - Modified:  2019-04-23 by Mike Duncan, update to v2 admin api

AnwenderAbbruchZulassen setzen [ ON ]
Fehleraufzeichnung setzen [ ON ]
Variable setzen [ $error ; 0 ]

# -------------------------------------------------------------
#  SET-UP
# -------------------------------------------------------------
Script ausführen [ Aus Liste ; "Set Config" ]
Variable setzen [ $endpoint ; "/server/config/general" ]
Variable setzen [ $curloptions ; " --request GET" &
				" --header \"Authorization: Bearer " & $$my.token & "\"" &
				" --header \"Content-Type: application/json\"" &
				" --dump-header $$my.headers" ]

# -------------------------------------------------------------
#  PROCESS
# -------------------------------------------------------------
Aus URL einfügen ⚠️⚠️⚠️ FM-XML-EXPORT-EXPLODER: UNKNOWN SCRIPT-STEP [ ID: "160" ] ⚠️⚠️⚠️
Script ausführen [ Aus Liste ; "Handle response" ]

Wenn [ Hole ( ScriptErgebnis ) = "1" ]
	# parse json response
	Feldwert setzen [ FMS__fmserver::cacheSize ; JSONGetElement ( $$my.result ; "response.cacheSize" ) ]
	Feldwert setzen [ FMS__fmserver::maxFiles ; JSONGetElement ( $$my.result ; "response.maxFiles" ) ]
	Feldwert setzen [ FMS__fmserver::maxProConnections ; JSONGetElement ( $$my.result ; "response.maxProConnections" ) ]
	Feldwert setzen [ FMS__fmserver::maxPSOS ; JSONGetElement ( $$my.result ; "response.maxPSOS" ) ]
	Feldwert setzen [ FMS__fmserver::openDatabasesOnStart ; JSONGetElement ( $$my.result ; "response.openDatabasesOnStart" ) ]
	Feldwert setzen [ FMS__fmserver::startupRestorationEnabled ; JSONGetElement ( $$my.result ; "response.startupRestorationEnabled" ) ]
	Feldwert setzen [ FMS__fmserver::startupRestorationLogPath ; JSONGetElement ( $$my.result ; "response.startupRestorationLogPath" ) ]
	Feldwert setzen [ FMS__fmserver::useSchedules ; JSONGetElement ( $$my.result ; "response.useSchedules" ) ]
	Feldwert setzen [ FMS__fmserver::autostartDBS ; JSONGetElement ( $$my.result ; "response.autostartDBS" ) ]
	Feldwert setzen [ FMS__fmserver::autostartWPE ; JSONGetElement ( $$my.result ; "response.autostartWPE" ) ]
	
Ende (wenn)

# -------------------------------------------------------------
#  CLEAN UP
# -------------------------------------------------------------
Wenn [ $error = 0 ]
	#  set to exit true if you do not need to pass an error
	Variable setzen [ $error ; 1 // exit true ]
Ende (wenn)

Aktuelles Script verlassen [ $error ]
