tests/snapshots/scripts_sanitized/Admin API Tool/Database Server - ID 12/Get Server Metadata - ID 118.txt.snap
---
source: src/main.rs
expression: output_content
---
#  PURPOSE: Get Server Metadata
#  HISTORY:&#13;   - Created:   2020-01-19 by Mike Duncan (mduncan@soliantconsulting.com)&#13;   - Modified:  2020-00-00 

AnwenderAbbruchZulassen setzen [ ON ]
Fehleraufzeichnung setzen [ ON ]
Variable setzen [ $error ; 0 ]

# -------------------------------------------------------------
#  SET-UP
# -------------------------------------------------------------
Script ausführen [ Aus Liste ; "Set Config" ]
Variable setzen [ $endpoint ; "/server/metadata" ]
Variable setzen [ $curloptions ; " --request GET" &
				" --header \"Authorization: Bearer " & $$my.token & "\"" &
				" --header \"Content-Type: application/json\"" &
				" --dump-header $$my.headers" ]

# -------------------------------------------------------------
#  PROCESS
# -------------------------------------------------------------
Aus URL einfügen ⚠️⚠️⚠️ FM-XML-EXPORT-EXPLODER: UNKNOWN SCRIPT-STEP [ ID: "160" ] ⚠️⚠️⚠️
Script ausführen [ Aus Liste ; "Handle response" ]

Wenn [ Hole ( ScriptErgebnis ) = "1" ]
	# parse json response
	Feldwert setzen [ FMS__fmserver::serverName ; JSONGetElement ( $$my.result ; "response.ServerName" ) ]
	Feldwert setzen [ FMS__fmserver::serverID ; JSONGetElement ( $$my.result ; "response.ServerID" ) ]
	Feldwert setzen [ FMS__fmserver::serverIP ; JSONGetElement ( $$my.result ; "response.ServerIPAddress" ) ]
	Feldwert setzen [ FMS__fmserver::serverVersion ; JSONGetElement ( $$my.result ; "response.ServerVersion" ) ]
	
Ende (wenn)

# -------------------------------------------------------------
#  CLEAN UP
# -------------------------------------------------------------
Wenn [ $error = 0 ]
	#  set to exit true if you do not need to pass an error
	Variable setzen [ $error ; 1 // exit true ]
Ende (wenn)

Aktuelles Script verlassen [ $error ]
